--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": "^7.1",
         "yiisoft/yii2": "~2.0.0",
+        "bower-asset/jquery": ">=2.2",
         "creocoder/yii2-flysystem": "^0.9"
     },
     "license": "MIT",
