--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         "assets"
     ],
     "require": {
-        "php": "^5.6 || ^7.0 || ^8.0",
-        "yiisoft/yii2": "~2.0.13",
+        "php": "^7.2 || ^8.0",
         "bower-asset/jquery": ">=2.2",
-        "creocoder/yii2-flysystem": "^0.9"
+        "league/flysystem": "^2.0",
+        "yiisoft/yii2": "~2.0.13"
     },
     "license": "MIT",
     "authors": [
@@ -34,6 +34,13 @@
         }
     },
     "require-dev": {
+        "league/flysystem-aws-s3-v3": "^3.0",
         "squizlabs/php_codesniffer": "^3.6"
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
+        }
     }
 }
