--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,19 @@
     },
     "require-dev": {
         "league/flysystem-aws-s3-v3": "^3.0",
-        "squizlabs/php_codesniffer": "^3.6"
+        "squizlabs/php_codesniffer": "^3.6",
+        "vimeo/psalm": "^4.29"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
             "yiisoft/yii2-composer": true
         }
+    },
+    "scripts": {
+        "cbf": "./vendor/bin/phpcbf",
+        "cs": "./vendor/bin/phpcs",
+        "psalm": "./vendor/bin/psalm --no-cache",
+        "psalm-trace": "./vendor/bin/psalm --no-cache --show-info=1 2>&1 | grep Trace"
     }
 }
