--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": "^7.2 || ^8.0",
         "bower-asset/jquery": ">=2.2",
-        "league/flysystem": "^2.0",
+        "league/flysystem": "^2.0 || ^3.0",
         "yiisoft/yii2": "~2.0.13"
     },
     "license": "MIT",
